--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "atom-workspace": "atom-sherpa:toggle"
   },
   "activationHooks": ["language-javascript:grammar-used", "language-coffee-script:grammar-used"],
-  "repository": "https://github.com/atom/atom-jarvis",
+  "repository": "https://github.com/gojarvis/atom-jarvis.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
